[package]
name = "ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "^0.10"
futures-lite = "^1.12"
fastrand = "^1.8.0"
async-channel = "*"
async-lock = "*"

[dev-dependencies]
async-executor = "1.5.0"
async-channel = "1.4.1"
async-io = "1.1.9"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support", "async_futures"] }
easy-parallel = "3.1.0"
num_cpus = "1.13.0"
once_cell = "1.16.0"
futures = "*"

[[bench]]
name = "executor"
harness = false